--- a/app/src/main/res/layout/activity_order_list_item.xml
+++ b/app/src/main/res/layout/activity_order_list_item.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/height_5"
+    android:layout_marginLeft="@dimen/height_4"
     android:layout_marginTop="@dimen/height_3"
-    android:layout_marginRight="@dimen/height_5"
-    android:layout_marginBottom="@dimen/height_5"
+    android:layout_marginRight="@dimen/height_4"
+    android:layout_marginBottom="@dimen/height_3"
     android:background="@color/color_gray_bg"
     app:cardCornerRadius="@dimen/height_8"
     app:cardElevation="@dimen/height_8">
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="10dp"
+        android:padding="8dp"
         android:weightSum="1">
 
         <RelativeLayout
@@ -29,31 +29,36 @@
 
             <ImageView
                 android:id="@+id/img_medicine"
-                android:layout_width="@dimen/height_50"
-                android:layout_height="@dimen/height_50"
-                android:src="@drawable/bottle" />
+                android:layout_width="@dimen/height_35"
+                android:layout_height="@dimen/height_35"
+                android:src="@drawable/pending" />
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/height_10"
+            android:layout_weight="0.8">
 
             <TextView
                 android:id="@+id/txt_order_id"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/txtDate"
                 android:fontFamily="@font/open_sans_regular"
+                android:maxLines="2"
                 android:text="abc"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/colorblack"
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/txtDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/height_60"
+                android:layout_marginRight="@dimen/height_8"
                 android:fontFamily="@font/open_sans_regular"
                 android:text="29/9/2018"
                 android:textAppearance="?android:attr/textAppearanceSmall"
@@ -81,11 +86,11 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_content"
                 android:layout_alignParentEnd="true"
-                android:layout_marginRight="@dimen/height_50"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/height_8"
                 android:fontFamily="@font/open_sans_regular"
-                android:text="Processing"
-                android:textColor="@color/color_sky_blue"
-                android:layout_alignParentRight="true" />
+                android:text="Pending"
+                android:textColor="@color/color_orange" />
 
         </RelativeLayout>
 
