--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -33,7 +33,7 @@
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
+                android:layout_height="250dp"
                 android:layout_marginLeft="@dimen/height_8"
                 android:layout_marginTop="@dimen/height_4"
                 android:layout_marginRight="@dimen/height_8"
@@ -62,8 +62,8 @@
 
                         <Button
                             android:layout_width="match_parent"
-                            android:layout_height="35dp"
-                            android:layout_marginRight="@dimen/height_3"
+                            android:layout_height="32dp"
+                            android:layout_marginRight="@dimen/height_10"
                             android:layout_weight="1"
                             android:background="@drawable/custom_btn_bg_yellow"
                             android:text="yearly"
@@ -71,16 +71,17 @@
 
                         <Button
                             android:layout_width="match_parent"
-                            android:layout_height="35dp"
+                            android:layout_height="32dp"
                             android:layout_weight="1"
+                            android:layout_marginRight="@dimen/height_10"
                             android:background="@drawable/custom_btn_bg_yellow"
                             android:text="monthly"
                             android:textColor="@android:color/white" />
 
                         <Button
                             android:layout_width="match_parent"
-                            android:layout_height="35dp"
-                            android:layout_marginLeft="@dimen/height_3"
+                            android:layout_height="32dp"
+                            android:layout_marginLeft="@dimen/height_10"
                             android:layout_weight="1"
                             android:background="@drawable/custom_btn_bg"
                             android:text="weekly"
@@ -137,12 +138,12 @@
 
                             <ImageView
                                 android:id="@+id/img_pending_order"
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
                                 android:layout_centerVertical="true"
                                 android:layout_marginLeft="@dimen/height_20"
                                 android:layout_marginTop="@dimen/height_15"
-                                android:background="@drawable/bottle" />
+                                android:background="@drawable/pending" />
 
 
                             <TextView
@@ -186,12 +187,12 @@
 
                             <ImageView
                                 android:id="@+id/img_processing_order"
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
                                 android:layout_centerVertical="true"
                                 android:layout_marginLeft="@dimen/height_20"
                                 android:layout_marginTop="@dimen/height_15"
-                                android:background="@drawable/bottle" />
+                                android:background="@drawable/processing" />
 
 
                             <TextView
@@ -235,12 +236,12 @@
 
                             <ImageView
                                 android:id="@+id/img_completed_order"
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
                                 android:layout_alignParentTop="true"
                                 android:layout_marginLeft="@dimen/height_20"
                                 android:layout_marginTop="7dp"
-                                android:background="@drawable/bottle" />
+                                android:background="@drawable/checked" />
 
 
                             <TextView
@@ -294,7 +295,7 @@
                     android:id="@+id/map"
                     android:name="com.google.android.gms.maps.SupportMapFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="220dp"
+                    android:layout_height="260dp"
                     android:layout_marginTop="@dimen/height_10"
                     tools:context=".activity.OrderTrackingActivity" />
 
