--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -72,8 +72,8 @@
                         <Button
                             android:layout_width="match_parent"
                             android:layout_height="32dp"
-                            android:layout_weight="1"
                             android:layout_marginRight="@dimen/height_10"
+                            android:layout_weight="1"
                             android:background="@drawable/custom_btn_bg_yellow"
                             android:text="monthly"
                             android:textColor="@android:color/white" />
@@ -129,148 +129,10 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
-                        <RelativeLayout
-                            android:id="@+id/relPendingOrder"
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/order_recycler_view"
                             android:layout_width="match_parent"
-                            android:paddingTop="@dimen/height_6"
-                            android:paddingBottom="@dimen/height_6"
-                            android:layout_height="wrap_content">
-
-                            <ImageView
-                                android:id="@+id/img_pending_order"
-                                android:layout_width="32dp"
-                                android:layout_height="32dp"
-                                android:layout_centerVertical="true"
-                                android:layout_marginLeft="@dimen/height_20"
-                                android:layout_marginTop="@dimen/height_15"
-                                android:background="@drawable/pending" />
-
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_centerVertical="true"
-                                android:layout_marginLeft="@dimen/height_10"
-                                android:layout_marginTop="@dimen/height_6"
-                                android:layout_marginBottom="@dimen/height_8"
-                                android:layout_toEndOf="@+id/img_pending_order"
-                                android:layout_toRightOf="@+id/img_pending_order"
-                                android:fontFamily="@font/open_sans_regular"
-                                android:text="Pending Orders (20)"
-                                android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:textColor="@android:color/black"
-                                android:textStyle="bold" />
-
-                            <ImageView
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
-                                android:layout_alignParentEnd="true"
-                                android:layout_alignParentRight="true"
-                                android:layout_centerVertical="true"
-                                android:layout_marginTop="@dimen/height_15"
-                                android:layout_marginRight="@dimen/height_20"
-                                android:background="@drawable/ic_arrow_right_yellow" />
-
-                        </RelativeLayout>
-
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="0.3dp"
-                            android:background="@color/coloryellow" />
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:paddingTop="@dimen/height_6"
-                            android:paddingBottom="@dimen/height_6"
-                            android:layout_height="wrap_content">
-
-                            <ImageView
-                                android:id="@+id/img_processing_order"
-                                android:layout_width="32dp"
-                                android:layout_height="32dp"
-                                android:layout_centerVertical="true"
-                                android:layout_marginLeft="@dimen/height_20"
-                                android:layout_marginTop="@dimen/height_15"
-                                android:background="@drawable/processing" />
-
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_centerVertical="true"
-                                android:layout_marginLeft="@dimen/height_10"
-                                android:layout_marginTop="@dimen/height_6"
-                                android:layout_marginBottom="@dimen/height_8"
-                                android:layout_toEndOf="@+id/img_processing_order"
-                                android:layout_toRightOf="@+id/img_processing_order"
-                                android:fontFamily="@font/open_sans_regular"
-                                android:text="Processing Orders (20)"
-                                android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:textColor="@android:color/black"
-                                android:textStyle="bold" />
-
-                            <ImageView
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
-                                android:layout_alignParentEnd="true"
-                                android:layout_alignParentRight="true"
-                                android:layout_centerVertical="true"
-                                android:layout_marginLeft="@dimen/height_20"
-                                android:layout_marginTop="@dimen/height_15"
-                                android:layout_marginRight="@dimen/height_20"
-                                android:background="@drawable/ic_arrow_right_yellow" />
-
-                        </RelativeLayout>
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="0.3dp"
-                            android:background="@color/coloryellow" />
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:paddingTop="@dimen/height_6"
-                            android:paddingBottom="@dimen/height_6"
-                            android:layout_height="wrap_content">
-
-                            <ImageView
-                                android:id="@+id/img_completed_order"
-                                android:layout_width="32dp"
-                                android:layout_height="32dp"
-                                android:layout_alignParentTop="true"
-                                android:layout_marginLeft="@dimen/height_20"
-                                android:layout_marginTop="7dp"
-                                android:background="@drawable/checked" />
-
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_centerVertical="true"
-                                android:layout_marginLeft="@dimen/height_10"
-                                android:layout_marginTop="@dimen/height_6"
-                                android:layout_marginBottom="@dimen/height_8"
-                                android:layout_toEndOf="@+id/img_completed_order"
-                                android:layout_toRightOf="@+id/img_completed_order"
-                                android:fontFamily="@font/open_sans_regular"
-                                android:text="Completed Orders (20)"
-                                android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:textColor="@android:color/black"
-                                android:textStyle="bold" />
-
-                            <ImageView
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
-                                android:layout_alignParentEnd="true"
-                                android:layout_alignParentRight="true"
-                                android:layout_centerVertical="true"
-                                android:layout_marginLeft="@dimen/height_20"
-                                android:layout_marginTop="@dimen/height_15"
-                                android:layout_marginRight="@dimen/height_20"
-                                android:background="@drawable/ic_arrow_right_yellow" />
-
-                        </RelativeLayout>
+                            android:layout_height="wrap_content" />
 
                     </LinearLayout>
 
