--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -37,8 +37,7 @@
                     android:hint="First name"
                     android:inputType="text"
                     android:text="Prakash Pawar"
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold" />
+                    android:textColor="@android:color/black" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -53,6 +52,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_regular"
                     android:hint="Last name"
+                    android:textColor="@android:color/black"
                     android:inputType="text" />
 
             </android.support.design.widget.TextInputLayout>
@@ -68,6 +68,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_regular"
                     android:hint="Mobile number"
+                    android:textColor="@android:color/black"
                     android:inputType="number" />
 
             </android.support.design.widget.TextInputLayout>
@@ -83,6 +84,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_regular"
                     android:hint="Email ID"
+                    android:textColor="@android:color/black"
                     android:inputType="textEmailAddress" />
 
             </android.support.design.widget.TextInputLayout>
@@ -99,6 +101,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_regular"
                     android:hint="Gender"
+                    android:textColor="@android:color/black"
                     android:inputType="text" />
 
             </android.support.design.widget.TextInputLayout>
@@ -115,6 +118,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_regular"
                     android:hint="Vehicle"
+                    android:textColor="@android:color/black"
                     android:inputType="text" />
 
             </android.support.design.widget.TextInputLayout>
