--- a/app/src/main/res/layout/activity_order_details_list_item.xml
+++ b/app/src/main/res/layout/activity_order_details_list_item.xml
@@ -105,5 +105,5 @@
         android:layout_height="0.3dp"
         android:layout_marginTop="@dimen/height_6"
         android:layout_marginRight="10dp"
-        android:background="@color/colorblack" />
+        android:background="@color/colorlightGray" />
 </LinearLayout>
