--- a/app/src/main/res/layout/activity_order_list_item.xml
+++ b/app/src/main/res/layout/activity_order_list_item.xml
@@ -28,10 +28,9 @@
             android:gravity="center">
 
             <ImageView
-                android:id="@+id/img_medicine"
+                android:id="@+id/img_view"
                 android:layout_width="@dimen/height_35"
-                android:layout_height="@dimen/height_35"
-                android:src="@drawable/pending" />
+                android:layout_height="@dimen/height_35" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -82,6 +81,7 @@
                 android:text="Amount: Rs. 125" />
 
             <TextView
+                android:id="@+id/txtProcessing"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_content"
