--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -19,6 +19,7 @@
         android:layout_marginTop="@dimen/height_15"
         android:fontFamily="@font/open_sans_regular"
         android:text="Profile"
+        android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/colorblack" />
 
@@ -35,7 +36,7 @@
         android:fontFamily="@font/open_sans_regular"
         android:text="Edit"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/colorblack"
+        android:textColor="@color/colorPrimary"
         android:textStyle="bold" />
 
     <android.support.v7.widget.CardView
@@ -63,6 +64,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/open_sans_regular"
                 android:text="Prakash Pawar"
+                android:textStyle="bold"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/colorblack" />
 
@@ -79,7 +81,8 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_regular"
                     android:text="+91 8833748362"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@android:color/black" />
 
 
                 <TextView
@@ -88,7 +91,9 @@
                     android:layout_alignParentEnd="true"
                     android:fontFamily="@font/open_sans_regular"
                     android:text="prakash@gmail.com"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+
+                    android:textColor="@android:color/black" />
 
             </RelativeLayout>
 
@@ -98,14 +103,16 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/open_sans_regular"
                 android:text="DB11220033"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@android:color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/open_sans_regular"
                 android:text="Bike"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@android:color/black" />
 
         </LinearLayout>
 
