--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -52,7 +52,7 @@
                             android:text="Order ID: MB1823564566"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textColor="@android:color/black"
-                            android:textStyle="bold"/>
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -72,17 +72,17 @@
                             android:layout_below="@+id/txtInvoiceId"
                             android:fontFamily="@font/open_sans_regular"
                             android:text="@string/rs_symbol_amount"
-                            android:textStyle="bold"
                             android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textColor="@android:color/black" />
+                            android:textColor="@android:color/black"
+                            android:textStyle="bold" />
 
                         <ImageView
+                            android:id="@+id/imgview"
                             android:layout_width="@dimen/height_20"
                             android:layout_height="@dimen/height_20"
                             android:layout_below="@+id/txtInvoiceId"
                             android:layout_marginRight="@dimen/height_5"
-                            android:layout_toLeftOf="@+id/txtCompleted"
-                            android:background="@drawable/checked" />
+                            android:layout_toLeftOf="@+id/txtCompleted" />
 
                         <TextView
                             android:id="@+id/txtCompleted"
@@ -91,7 +91,6 @@
                             android:layout_below="@+id/txtInvoiceId"
                             android:layout_alignParentEnd="true"
                             android:fontFamily="@font/open_sans_regular"
-                            android:text="Completed"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textColor="@color/color_green"
                             android:textStyle="bold" />
@@ -244,9 +243,9 @@
                             android:id="@+id/img_call"
                             android:layout_width="@dimen/height_20"
                             android:layout_height="@dimen/height_20"
-                            android:layout_marginRight="@dimen/height_10"
                             android:layout_alignParentEnd="true"
                             android:layout_alignParentRight="true"
+                            android:layout_marginRight="@dimen/height_10"
                             android:background="@drawable/phone" />
 
                     </RelativeLayout>
@@ -405,8 +404,8 @@
                 android:layout_height="@dimen/height_45"
                 android:layout_marginLeft="@dimen/height_30"
                 android:layout_marginTop="@dimen/height_10"
-                android:layout_marginBottom="@dimen/height_20"
                 android:layout_marginRight="@dimen/height_30"
+                android:layout_marginBottom="@dimen/height_20"
                 android:background="@drawable/custom_btn_bg"
                 android:fontFamily="@font/open_sans_regular"
                 android:text="Delivered"
