--- a/app/src/main/res/layout/fragment_dashboard_list_item.xml
+++ b/app/src/main/res/layout/fragment_dashboard_list_item.xml
@@ -49,9 +49,10 @@
 
     </RelativeLayout>
 
-
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.3dp"
-        android:background="@android:color/black" />
+        android:layout_height="0.25dp"
+        android:layout_marginLeft="@dimen/height_5"
+        android:layout_marginRight="@dimen/height_5"
+        android:background="@color/colorlightGray" />
 </LinearLayout>
