--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -21,6 +21,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rc_medicine_list"
             android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/height_5"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
@@ -30,9 +31,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/height_20"
+        android:layout_marginLeft="@dimen/height_10"
         android:layout_marginTop="@dimen/height_15"
-        android:layout_marginRight="@dimen/height_20"
+        android:layout_marginRight="@dimen/height_10"
         android:layout_marginBottom="@dimen/height_15"
         android:gravity="center"
         android:orientation="horizontal"
