--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -26,7 +26,8 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:fontFamily="@font/open_sans_regular"
-        android:text="Punam Maitri"
+        android:text="Android"
+        android:textColor="@android:color/white"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
@@ -34,9 +35,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="punam.maitri1@gmail.com"
+        android:text="Android@example.com"
         android:fontFamily="@font/open_sans_regular"
         android:layout_gravity="center"
+        android:textColor="@android:color/white"
         android:layout_marginTop="8dp"/>
 
 </LinearLayout>
