--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -28,9 +28,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/height_8"
-                app:hintTextAppearance="@style/TextLabel">
+                app:hintTextAppearance="@style/TextLabel"
+                android:textAppearance="?android:attr/textAppearanceSmall">
 
                 <EditText
+                    android:id="@+id/edt_first_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_regular"
@@ -49,13 +51,15 @@
                 app:hintTextAppearance="@style/TextLabel">
 
                 <EditText
+                    android:id="@+id/edt_last_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_regular"
                     android:hint="Last name"
                     android:imeOptions="actionNext"
                     android:textColor="@android:color/black"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -66,13 +70,16 @@
                 app:hintTextAppearance="@style/TextLabel">
 
                 <EditText
+                    android:id="@+id/edt_mobile_no"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_regular"
                     android:hint="Mobile number"
                     android:imeOptions="actionNext"
                     android:textColor="@android:color/black"
-                    android:inputType="number" />
+                    android:inputType="number"
+                    android:maxLength="10"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -83,13 +90,15 @@
                 app:hintTextAppearance="@style/TextLabel">
 
                 <EditText
+                    android:id="@+id/edt_email_id"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_regular"
                     android:hint="Email ID"
                     android:imeOptions="actionNext"
                     android:textColor="@android:color/black"
-                    android:inputType="textEmailAddress" />
+                    android:inputType="textEmailAddress"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -101,13 +110,15 @@
                 app:hintTextAppearance="@style/TextLabel">
 
                 <EditText
+                    android:id="@+id/edt_gender"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_regular"
                     android:hint="Gender"
                     android:imeOptions="actionNext"
                     android:textColor="@android:color/black"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -119,13 +130,15 @@
                 app:hintTextAppearance="@style/TextLabel">
 
                 <EditText
+                    android:id="@+id/edt_vehicle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_regular"
                     android:hint="Vehicle"
                     android:imeOptions="actionDone"
                     android:textColor="@android:color/black"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
 
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
