--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -170,7 +170,8 @@
                 android:weightSum="3"
                 android:layout_marginTop="@dimen/height_15"
                 android:layout_marginLeft="@dimen/height_50"
-                android:layout_marginRight="@dimen/height_50">
+                android:layout_marginRight="@dimen/height_50"
+                android:visibility="gone">
 
 
                 <View
@@ -205,7 +206,8 @@
                 android:orientation="horizontal"
                 android:gravity="center"
                 android:layout_marginTop="@dimen/height_20"
-                android:layout_marginBottom="@dimen/height_20">
+                android:layout_marginBottom="@dimen/height_20"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
