--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -34,7 +34,7 @@
         android:layout_marginTop="@dimen/height_15"
         android:layout_marginRight="@dimen/height_20"
         android:fontFamily="@font/open_sans_regular"
-        android:text="Edit"
+        android:text="EDIT"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold" />
