--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -25,7 +25,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/height_30">
+                    android:layout_marginRight="@dimen/height_15">
 
                     <ImageView
                         android:layout_width="150dp"
@@ -56,7 +56,7 @@
                             android:layout_width="22dp"
                             android:layout_height="25dp"
                             android:layout_centerInParent="true"
-                            android:background="@drawable/cart"
+                            android:background="@drawable/bell"
                             android:textAppearance="?android:attr/textAppearanceSmall" />
 
                     </RelativeLayout>
