Home fragment todays order back arrow changes

--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -96,6 +96,7 @@
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textColor="@color/color_green"
                             android:layout_marginTop="@dimen/height_3"
+                            android:layout_marginRight="@dimen/height_5"
                             android:textStyle="bold" />
 
 
